--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "gsap": "^3.13.0",
-    "vite": "^7.1.3"
+    "gsap": "^3.13.0"
   }
 }
